# esp32s3-wake-on-radio

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.ble  sdkconfig.defaults.dtim  sdkconfig.defaults.espnow  sdkconfig.defaults.listen
driver/: Makefile  esp32-wor-overlay.dts  esp32_wor.c
main/: CMakeLists.txt  Kconfig.projbuild  deep_sleep.c  deep_sleep.h  idf_component.yml  main.c  power_log.c  power_log.h  strategy_ble.c  strategy_ble.h  strategy_dtim.c  strategy_dtim.h  strategy_espnow.c  strategy_espnow.h  strategy_listen.c  strategy_listen.h  wake_gpio.c  wake_gpio.h  wifi_connect.c  wifi_connect.h
rpi/: dashboard.py  esp32-wor-dashboard.service  serial_logger.py  setup_rpi.sh  trigger_ble.py  trigger_dtim.py  trigger_espnow.py  trigger_listen.py  verify.sh
rpi/templates/: dashboard.html
scripts/: deploy_rpi.sh  flash_esp32.sh
